<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerDetails"
            type="com.anviam.fragmentapp.model.RegisterDetails" />
    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lavender">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:context=".ViewBindingActivity">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="16dp"
                    android:text="@string/register"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:text="@{registerDetails.name}" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:text="@{registerDetails.email}" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:text="@{registerDetails.password}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/play" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/pause" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnStop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stop" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

</layout>
