<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/edit_background"
        android:hint="@string/search_here"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSearch"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="12dp"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="@+id/et_search"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
        app:layout_constraintTop_toTopOf="@+id/et_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSatellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/satellite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTerrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/terrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSatellite" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddGeofence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Add Geofence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTerrain" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDecreaseRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />

            <TextView
                android:id="@+id/tvRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="100m"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnIncreaseRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/mapProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
