<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navGraph="@navigation/nav_graph" />

        <!-- Top Header -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_200"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivHumburger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/humburger"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toTopOf="@+id/tvHeader" />

        <!-- Middle Fragment Container -->
        <HorizontalScrollView
            android:id="@+id/sv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/ivHumburger"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_background"
                    android:padding="15dp"
                    android:text="@string/register"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_background"                    android:padding="15dp"
                    android:text="@string/chat"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_background"                    android:padding="15dp"
                    android:text="@string/logout"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"                    android:padding="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/google_map"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGoogle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"                    android:padding="15dp"
                    android:text="@string/google_map"
                    android:textColor="@color/black"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />

        <!-- Bottom Navigation -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sidebar Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/sidebar_header"
        app:itemIconTint="@color/lavender"
        app:itemTextColor="@color/lavender"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>
